--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css.css">
-       <script src="node_modules/axios/dist/axios.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body style="background-color: rgb(2, 4, 112); display: flex; flex-direction: column;">
  <h1 style="text-align: center; ; font-size: 60px; position: relative; top: 100px; color:rgb(48, 51, 212) ;" id="prayer">Prayer Times</h1>
